Moving IT to their own folder - success this time, based on https://stackoverflow.com/questions/67469183/integration-test-in-custom-folder-execution-failed-for-task-integrationtest